# clario

./: .gitignore  CLAUDE.md  package.json  pnpm-lock.yaml
.trae/rules/: project_rules.md
backend/: pyproject.toml
backend/src/app/: main.py
backend/src/app/agents/: __init__.py  base.py  orchestrator.py  promoter.py
backend/src/app/api/: __init__.py  agents.py  projects.py  validation.py
backend/src/app/models/: __init__.py  agent.py  spec.py
backend/src/app/services/: __init__.py  llm_service.py  project.py  validation.py
docs/: DEVELOPMENT.md  clario-spec.json  clario-spec.md  code-review-checklist.md  css-architecture-guide.md  design-system.md  developer-onboarding.md  document-alignment-checklist.md  minimum-feedback-loop-validation.md  phase1-development-plan.md  spec-analysis-matrix.md  sprint2-detailed-plan.md  tech-design.md  ui-interaction-guide.md
frontend/: .prettierignore  eslint.config.js  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/scripts/: setup-design-system-validation.js  test-design-system-integration.js  validate-design-system.js
frontend/src/: App.module.css  App.tsx  main.tsx  router.tsx
frontend/src/components/: ProjectCard.test.tsx  ProjectCard.tsx  ProjectDashboard.test.tsx  ProjectDashboard.tsx  SearchBar.module.css  SearchBar.test.tsx  SearchBar.tsx
frontend/src/hooks/: useConversation.ts  useCreateProject.ts  useProjects.ts
frontend/src/services/: api.test.ts  api.ts  conversationApi.ts
frontend/src/test/: setup.ts
frontend/src/tools/: design-validator.ts
frontend/src/types/: conversation.ts  project.ts
frontend/src/utils/: index.ts  validation.test.ts  (+1 more)
meta-doc/: SCOPE.md  SPEC_TEMPLATE.md  clario-spec.json  clario-spec.md  spec-to-markdown.py  spec.schema.json
(+48 files in other folders)
