[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clario-backend"
version = "0.1.0"
description = "Clario backend API service"
requires-python = ">=3.12"
authors = [{ name = "Clario Team" }]
dependencies = [
  "fastapi>=0.112",
  "uvicorn>=0.30",
  "pydantic>=2.7"
]

[dependency-groups]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
  "anyio>=4.4",
  "ruff>=0.5",
  "mypy>=1.10",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.12"
strict = true

[tool.hatch.build.targets.wheel]
packages = ["src/app"]
